ubiquity (1.9.3) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Ignore "apt API not stable yet" message.

  [ Colin Watson ]
  * Document --old-tzmap, --only, and the use of kdesudo in ubiquity(8).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 16 Jul 2008 18:23:30 +0100

ubiquity (1.9.2) intrepid; urgency=low

  [ Evan Dandrea ]
  * The partition resize widget expects floats, not ints.
  * Properly support the new d-i localechooser.
  * Automatic update of included source packages: base-installer
    1.86ubuntu3, choose-mirror 2.24ubuntu2, clock-setup 0.95ubuntu1,
    console-setup 1.25ubuntu2, debian-installer-utils 1.59ubuntu1, grub-
    installer 1.32ubuntu1, hw-detect 1.63ubuntu1, localechooser
    2.03ubuntu1, migration-assistant 0.6.2, partman-partitioning
    59ubuntu3, silo-installer 1.14ubuntu1, tzsetup 1:0.21, user-setup
    1.20ubuntu2, yaboot-installer 1.1.12ubuntu1.

  [ Colin Watson ]
  * If we fail to install complete language support, install the
    language-selector update-notifier hook so that the user is prompted to
    install more complete language support after installation (LP: #9392).
  * Adjust Brazilian and Japanese keyboard models when applying the keyboard
    layout on the fly (LP: #217140).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 16 Jul 2008 10:55:22 +0100

ubiquity (1.9.1) intrepid; urgency=low

  [ Evan Dandrea ]
  * Fixed the missing definition of HOSTNAME_BADDOTS, which was causing a
    crash when the user entered a hostname that ended in a dot.
  * Fix a crash introduced by the fix for LP: 40590.

  [ Jonathan Riddell ]
  * ubiquity-frontend-kde depends on kde-window-manager (KDE 4), not kwin
    (KDE 3).

  [ Colin Watson ]
  * Update file name for apt-setup 1:0.32.
  * Add apt-setup local generator to improve preseeding facilities.
  * KDE frontend: Use kdesudo-kde4 for now, and adjust ubiquity-wrapper to
    look for it in /usr/lib/kde4/bin/ (LP: #247537).