@@ -5,6 +5,8 @@ ubiquity (1.9.3) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Document --old-tzmap, --only, and the use of kdesudo in ubiquity(8).
+  * Remove /var/lib/localechooser/preseeded rather than setting
+    localechooser/alreadyrun to false.
 
  -- Evan Dandrea <evand@ubuntu.com>  Wed, 16 Jul 2008 18:23:30 +0100
 
